feat: add Activity Library component for managing carbon-reduction activities
- Implemented the ActivityLibrary component with functionalities to create, edit, delete, and restore activities.
- Integrated filtering options for searching activities by name, category, and status.
- Added pagination for activity listings.
- Utilized react-query for data fetching and state management.
- Included form validation and error handling for activity creation and updates.
- Enhanced user experience with modals for activity management and confirmation dialogs for deletions.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,12 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon_16x16.ico" sizes="16x16" />
+    <link rel="icon" type="image/x-icon" href="/favicon_32x32.ico" sizes="32x32" />
+    <link rel="icon" type="image/x-icon" href="/favicon_48x48.ico" sizes="48x48" />
+    <link rel="icon" type="image/x-icon" href="/favicon_64x64.ico" sizes="64x64" />
+    <link rel="icon" type="image/x-icon" href="/favicon_128x128.ico" sizes="128x128" />
+    <link rel="icon" type="image/x-icon" href="/favicon_256x256.ico" sizes="256x256" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="CarbonTrack - 碳减排追踪平台，记录您的环保行动，获得积分奖励" />
     <meta name="keywords" content="碳减排,环保,积分,可持续发展,绿色生活" />
