feat(frontend,router): 改造 404 页面为交互式动画并更新路由与 meta
- 为 NotFoundPage 添加基于 requestAnimationFrame 的 emoji 旋转/缩放/颜色过渡与 hover 交互逻辑
- 提取并引入 NotFoundPage.css，保留可访问性 focus 样式
- 将原生 <button> 替换为项目 Button 组件并使用 outline 样式
- 在主路由中注册通配符 '*' 渲染 NotFoundPage（使用 Suspense 包裹）
- 在 index.html 补充 theme-color / apple-mobile-web-app 等 PWA / iOS meta 标签

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,11 @@
     <link rel="icon" type="image/x-icon" href="/favicon_128x128.ico" sizes="128x128" />
     <link rel="icon" type="image/x-icon" href="/favicon_256x256.ico" sizes="256x256" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#16A34A" media="(prefers-color-scheme: light)" />
+    <meta name="theme-color" content="#065F46" media="(prefers-color-scheme: dark)" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="CarbonTrack" />
     <meta name="description" content="CarbonTrack - 碳减排追踪平台，记录您的环保行动，获得积分奖励" />
     <meta name="keywords" content="碳减排,环保,积分,可持续发展,绿色生活" />
     <title>CarbonTrack - 碳减排追踪平台</title>
