--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,9 +14,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="CarbonTrack" />
-    <meta name="description" content="CarbonTrack - 碳减排追踪平台，记录您的环保行动，获得积分奖励" />
-    <meta name="keywords" content="碳减排,环保,积分,可持续发展,绿色生活" />
-    <title>CarbonTrack - 碳减排追踪平台</title>
+    <meta name="description" content="CarbonTrack" />
+    <meta name="keywords" content="carbon reduction,environmental protection,points,sustainable development,green living" />
+    <title>CarbonTrack</title>
   </head>
   <body>
     <div id="root"></div>
